# stm32f411ve-disco

./: .cargo-checklist.md  .gitignore  Cargo.toml  Embed.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md  build.rs  memory.x.bak  rust-toolchain.toml
.cargo/: config.toml
examples/: audio_dac.rs  blinky.rs  button.rs  compass.rs  external_7seg_display.rs  gyro.rs  leds.rs  microphone.rs
src/: audio.rs  button.rs  compass.rs  gyro.rs  leds.rs  lib.rs  microphone.rs
